--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -5,12 +5,12 @@
   "defaultTitle": "MSMC |",
   "icon": "/faction-logos/msmc.svg",
   "header": {
-    "planet": "Hercynia",
+    "planet": "Prasinos-4",
     "year": "5014u",
-    "system": "Ardennes-3",
-    "gate": "Atlas-Quanokrim",
+    "system": "Prasino",
+    "gate": "None",
     "ring": "Atlas-Line",
-    "headerTitle": "Mirrorsmoke",
+    "headerTitle": "MecHunter",
     "headerSubtitle": "Mercenary Company",
     "subheaderTitle": "Crisis Response",
     "subheaderSubtitle": "Delta-Echo-Echo-Zulu"
@@ -19,6 +19,10 @@
     "APOLLO": {
       "age": "32u",
       "pob": "Evergreen"
+    },
+    "RAI-DEN": {
+      "age": "48u",
+      "pob": "Gaia"
     },
     "RAI-DEN": {
       "age": "48u",
