--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -24,9 +24,9 @@
       "age": "48u",
       "pob": "Gaia"
     },
-    "RAI-DEN": {
-      "age": "48u",
-      "pob": "Gaia"
+    "KIWI": {
+      "age": "Unknown",
+      "pob": "Unknown"
     }
   }
 }
